# zoe-async-exercise

./: Makefile  README.md  pyproject.toml
src/: consts.py  inference.py
src/client/: __main__.py
src/proto/: inference.proto  inference_pb2.py  inference_pb2.pyi  inference_pb2_grpc.py
src/server/: __main__.py
